--- a/src/component/Shop/Shop.css
+++ b/src/component/Shop/Shop.css
@@ -16,7 +16,7 @@
     width: 98%;
     margin: 0 auto;
     height: 500px;
-    background: #eca265;
+    background: #fcc9a0;
     border-radius: 20px;
     margin-top: 100px;
     position: sticky;
